--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,21 +1,65 @@
 astroid==2.11.5
 attrs==21.4.0
+autopep8==1.6.0
+certifi==2022.5.18.1
+cffi==1.15.0
+cfgv==3.3.1
+charset-normalizer==2.0.12
+cryptography==37.0.2
 dill==0.3.5.1
+distlib==0.3.4
+filelock==3.7.1
 flake8==4.0.1
+identify==2.5.1
+idna==3.3
 iniconfig==1.1.1
 isort==5.10.1
 lazy-object-proxy==1.7.1
 mccabe==0.6.1
+mpmath==1.2.1
+mypy==0.961
+mypy-extensions==0.4.3
+nodeenv==1.6.0
+ntlm-auth==1.5.0
+numpy==1.22.4
 packaging==21.3
+pbr==5.9.0
 platformdirs==2.5.2
 pluggy==1.0.0
+ply==3.11
+pre-commit==2.19.0
+psutil==5.9.1
 py==1.11.0
 pycodestyle==2.8.0
+pycparser==2.21
 pyflakes==2.4.0
 pylint==2.14.1
 pyparsing==3.0.9
 pytest==7.1.2
+python-constraint==1.4.0
+python-dateutil==2.8.2
+PyYAML==6.0
+qiskit==0.36.2
+qiskit-aer==0.10.4
+qiskit-ibmq-provider==0.19.1
+qiskit-ignis==0.7.1
+qiskit-terra==0.20.2
+requests==2.28.0
+requests-ntlm==1.1.0
+retworkx==0.11.0
+scipy==1.8.1
+six==1.16.0
+stevedore==3.5.0
+symengine==0.9.2
+sympy==1.10.1
+testfixtures==6.18.5
+toml==0.10.2
 tomli==2.0.1
 tomlkit==0.11.0
+tweedledum==1.1.1
 typing_extensions==4.2.0
+urllib3==1.26.9
+virtualenv==20.14.1
+websocket-client==1.3.2
+websockets==10.3
 wrapt==1.14.1
