Added a pylintrc file

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -54,6 +54,7 @@ repos:
         types: [python]
         args:
           - "--recursive"
+          - "--rcfile=.pylintrc"
           - "y"
           - "."
   
